--- a/landing_page.html
+++ b/landing_page.html
@@ -106,8 +106,8 @@
         <div class="post-input-container">
           <textarea rows="3" placeholder="What's on your mind?"></textarea>
           <div class="add-posts">
-            <a href="#">
-              <img src="Images/socialbook_img/images/live-video.png">Live Video
+            <a href="chatApp/Realtime-Chat-App/index.html">
+              <img src="Images/socialbook_img/images/live-video.png">ChatApp
             </a>
             <a href="#">
               <img src="Images/socialbook_img/images/photo.png">Photo/Video
